--- a/templates/index.html
+++ b/templates/index.html
@@ -111,10 +111,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js" defer></script>
     <script src="/js/auth.js" defer></script>
     <script src="/js/blog.js" defer></script>
-    <script src="/js/websocket.js" defer></script>
 </head>
 <body>
-    <h1>Bloggator Reborn</h1>
+    <h1>HackWeb</h1>
     <div class="flex">
         <a href="/api/logout"><button type="button">Log Out</button></a>
         {% if username %}
@@ -122,18 +121,16 @@
         {% endif %}
         <br>
     </div>
-    <p>Chat rooms! It's like a sequel to blogs!</p>
+    <p>NO MORE DESCRIPTIONS FOR YOU!!!</p>
     
 
     <div class="flex">
         <form id="new_room" action="/new-room" method="post">
-            <label for="title">Title:</label>
-            <input type="text" id="title" name="title" required>
+            <label for="message">Order:</label>
+            <input type="text" id="message" name="message" required>
 
-            <label for="visibility">Private:</label>
-            <input type="checkbox" class="checkbox" id="visibility" name="visibility" value="visible">
             <br>
-            <button type="button" onclick="createChat()">Create Chat</button>
+            <button type="button" onclick="createOrder()">Create Order</button>
         </form>
 
         <form id="current_room" action="/current-room" method="post">
