Work on profile settings

--- a/templates/index.html
+++ b/templates/index.html
@@ -137,11 +137,16 @@
             <!-- This form will be dynamically updated by the JavaScript -->
         </form>
 
-        <form id="actual_room" action="/actual-room" method="post">
-            <button id="send">send</button>
-            <input type="text" id="message">
-            <div id="messages"></div>
-        </form>
+        <form action="/your-server-endpoint" method="post" enctype="multipart/form-data">
+
+            <label for="password">New Password:</label>
+            <input type="password" id="password" name="password">
+            <br>
+            <label for="image">Upload Profile Picture:</label>
+            <input type="file" id="image" name="image" accept="image/*">
+            <br>
+            <button type="submit">Send</button>
+    </form>
     </div>
 
     <br>
